--- a/src/app/worker/worker.component.html
+++ b/src/app/worker/worker.component.html
@@ -1,3 +1,6 @@
 <router-outlet></router-outlet>
-<app-listar></app-listar>
+<div [hidden]="route.children.length!=0">
+    <app-listar></app-listar>
+ </div>
+
 
