--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     </button>
     <span class="titleApp">EASYJOBS</span>
     <span class="example-spacer"></span>
-    <button class="btToolbar" mat-button>Empleados</button>
+    <button class="btToolbar" [routerLink]="'employeer'" mat-button>Empleados</button>
     <button class="btToolbar" [routerLink]="'occupation'" mat-button>Ocupaciones</button>
     <button class="btToolbar"  mat-button>Contrato</button>
     <button class="btToolbar" [routerLink]="'home'" mat-button>REGISTRATE</button>
