--- a/src/app/employeer/employeer-dialog/employeer-dialog.component.html
+++ b/src/app/employeer/employeer-dialog/employeer-dialog.component.html
@@ -1,1 +1,8 @@
-<p>employeer-dialog works!</p>
+<h2 mat-dialog-title>Eliminar</h2>
+<mat-dialog-content>
+  <p>Esta seguro de eliminar?</p>
+</mat-dialog-content>
+<mat-dialog-actions align="center">
+  <button mat-raised-button color="primary" mat-dialog-close>No</button>
+  <button mat-raised-button color="primary" [mat-dialog-close]="true" cdkFocusInitial>Si</button>
+</mat-dialog-actions>
