--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <span class="example-spacer"></span>
     <button class="btToolbar" [routerLink]="'employeer'" mat-button>Empleados</button>
     <button class="btToolbar" [routerLink]="'occupation'" mat-button>Ocupaciones</button>
-    <button class="btToolbar"  mat-button>Contrato</button>
+    <button class="btToolbar" [routerLink]="'employeer/contractService'" mat-button>Contrato</button>
     <button class="btToolbar" [routerLink]="'home'" mat-button>REGISTRATE</button>
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
       <mat-icon><img src=""></mat-icon>
