--- a/src/app/worker/listar/listar.component.html
+++ b/src/app/worker/listar/listar.component.html
@@ -64,13 +64,30 @@
       <ng-container matColumnDef="accion01">
         <th mat-header-cell *matHeaderCellDef>Acciones</th>
         <td mat-cell *matCellDef="let element">
-          <button
+          <!-- <button
             mat-raised-button
             color="primary"
             [routerLink]="['/worker/edicion', element.id]"
           >
             <span class="material-icons">update</span>
+          </button> -->
+          <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+            <mat-icon>more_vert</mat-icon>
           </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item [routerLink]="['/worker/edicion', element.id]">
+              <mat-icon>update</mat-icon>
+              <span>Actualizar</span>
+            </button>
+            <button mat-menu-item [routerLink]="'/worker/contractWorker'">
+              <mat-icon>create</mat-icon>
+              <span>Crear Contrato</span>
+            </button>
+            <!-- <button mat-menu-item>
+              <mat-icon>notifications_off</mat-icon>
+              <span>Disable alerts</span>
+            </button> -->
+          </mat-menu>
         </td>
       </ng-container>
 
