configuracion de navegacion de user story 8

--- a/src/app/worker/register-contract/register-contract.component.html
+++ b/src/app/worker/register-contract/register-contract.component.html
@@ -8,13 +8,13 @@
             <br>
             <mat-form-field appearance="outline" class="fieldFormCU">
                 <mat-label>Ingresa tu ID</mat-label>
-                <input matInput placeholder="ID" formControlName="serviceType">
+                <input matInput placeholder="ID" formControlName="worker_id">
             </mat-form-field>
             <br>
             <br>
             <mat-form-field appearance="outline" class="fieldFormCU">
                 <mat-label>MONTO</mat-label>
-                <input matInput placeholder="Monto de Servicio" formControlName="age_worker">
+                <input matInput placeholder="Monto de Servicio" formControlName="monto">
             </mat-form-field>
             
             <div class="groupButton">
