--- a/src/app/worker/listar-contract-monto/listar-contract-monto.component.html
+++ b/src/app/worker/listar-contract-monto/listar-contract-monto.component.html
@@ -6,34 +6,36 @@
     
 <input matInput (keyup) = "filtrar($event)" placeholder="Buscar X Monto">
     </mat-form-field>
+    <button class="btCreateWorker"  mat-raised-button [routerLink]="'/worker/addContractWorker'">Nuevo</button>
+
     
     </div>
     <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort>
         <!-- Monto Column -->
-        <ng-container matColumnDef="age_worker">
+        <ng-container matColumnDef="worker_id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Monto</th>
-            <td mat-cell *matCellDef="let element">{{ element.age_worker }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.worker_id }}</td>
         </ng-container>
 
         <!-- ID Column -->
-        <ng-container matColumnDef="id">
+        <ng-container matColumnDef="service_contract_id">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-          <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.service_contract_id }}</td>
         </ng-container>
 
         <!-- Nombre Column -->
-        <ng-container matColumnDef="name_worker">
+        <!-- <ng-container matColumnDef="name_worker">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
           <td mat-cell *matCellDef="let element">
             {{ element.name_worker }}
         </td>
-        </ng-container>
+        </ng-container> -->
         <!-- Celular Column -->
-        <ng-container matColumnDef="phone_worker">
+        <ng-container matColumnDef="monto">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Celular</th>
             <td mat-cell *matCellDef="let element">
-        {{ element.phone_worker }}
+        {{ element.monto }}
             </td>
         </ng-container>
     
