configuracion de navegacion de user story 6,7

--- a/src/app/employeer/employeer-list/employeer-list.component.html
+++ b/src/app/employeer/employeer-list/employeer-list.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1 style="text-align: center">Listado de Trabajadores</h1>
+    <h1 style="text-align: center">Listado de Empleadores</h1>
     <div class="searchNav">
       <mat-form-field appearance="outline" class="inputSearch">
           <!-- <mat-label>Nombre</mat-label> -->
