algunos cambios de nombre de columnas y botones

--- a/src/app/employeer/list-service-contract/list-service-contract.component.html
+++ b/src/app/employeer/list-service-contract/list-service-contract.component.html
@@ -10,7 +10,7 @@
       <button class="btCreateWorker"  mat-raised-button [routerLink]="'/worker/nuevo'">Nuevo</button>
     </div>
     <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" matSort>
+      <table mat-table [dataSource]!="dataSource" matSort>
         <!-- ID Column -->
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
