--- a/src/app/worker/register-contract/register-contract.component.html
+++ b/src/app/worker/register-contract/register-contract.component.html
@@ -13,6 +13,12 @@
             <br>
             <br>
             <mat-form-field appearance="outline" class="fieldFormCU">
+                <mat-label>Ingresa ID del contrato de servicio</mat-label>
+                <input matInput placeholder="ID" formControlName="service_contract_id">
+            </mat-form-field>
+            <br>
+            <br>
+            <mat-form-field appearance="outline" class="fieldFormCU">
                 <mat-label>MONTO</mat-label>
                 <input matInput placeholder="Monto de Servicio" formControlName="monto">
             </mat-form-field>
