--- a/src/app/employeer/create-service-contract/create-service-contract.component.html
+++ b/src/app/employeer/create-service-contract/create-service-contract.component.html
@@ -9,7 +9,7 @@
             <input matInput placeholder="ID" formControlName="employeer_id">
         </mat-form-field>
 
-            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-hint>YYYY-MM-DD</mat-hint>
         <br>
         <mat-form-field appearance="outline" class="fieldFormCU">
             <mat-label>Selecciona la fecha</mat-label>
@@ -24,7 +24,7 @@
         <br>
         <mat-form-field appearance="outline" class="fieldFormCU">
             <mat-label>Ingresa una descripción</mat-label>
-            <input matInput placeholder="Descripcion" formControlName="descripcion">
+            <input matInput placeholder="Descripcion" formControlName="desc_service">
         </mat-form-field>
         <br>
 
