--- a/src/app/employeer/list-service-contracts-per-date/list-service-contracts-per-date.component.html
+++ b/src/app/employeer/list-service-contracts-per-date/list-service-contracts-per-date.component.html
@@ -1,16 +1,22 @@
 <div class="container">
-    <h1 style="text-align: center">Contratos de servicio por fecha</h1>
+    <h1 style="text-align: center">Contratos de servicio</h1>
     <div class="searchNav">
       <mat-form-field appearance="outline" class="inputSearch">
           <!-- <mat-label>Nombre</mat-label> -->
           
-          <input matInput (keyup) = "filtrar($event)" placeholder="Buscar Por Fecha">
+          <input matInput (keyup) = "filtrar($event)" placeholder="Buscar">
           
       </mat-form-field>
       <button class="btCreateWorker"  mat-raised-button [routerLink]="'/employeer/addContract'">Nuevo</button>
     </div>
     <div class="mat-elevation-z8">
       <table mat-table [dataSource]="dataSource" matSort>
+
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+          <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+        </ng-container>
+
 
         <!-- IDContract Column -->
         <ng-container matColumnDef="employer_id">
