--- a/src/app/employeer/employeer-list/employeer-list.component.html
+++ b/src/app/employeer/employeer-list/employeer-list.component.html
@@ -4,7 +4,7 @@
       <mat-form-field appearance="outline" class="inputSearch">
           <!-- <mat-label>Nombre</mat-label> -->
           
-          <input matInput (keyup) = "filtrar($event)" placeholder="Buscar Trabajador">
+          <input matInput (keyup) = "filtrar($event)" placeholder="Buscar empleador">
           
       </mat-form-field>
       <button class="btCreateWorker"  mat-raised-button [routerLink]="'/employeer/nuevo'">Nuevo</button>
