--- a/src/app/employeer/list-service-contracts-per-date/list-service-contracts-per-date.component.html
+++ b/src/app/employeer/list-service-contracts-per-date/list-service-contracts-per-date.component.html
@@ -1,10 +1,10 @@
 <div class="container">
-    <h1 style="text-align: center">Contratos de servicio</h1>
+    <h1 style="text-align: center">Contratos creados por empleador</h1>
     <div class="searchNav">
       <mat-form-field appearance="outline" class="inputSearch">
           <!-- <mat-label>Nombre</mat-label> -->
           
-          <input matInput (keyup) = "filtrar($event)" placeholder="Buscar">
+          <input matInput (keyup) = "filtrar($event)" placeholder="Buscar contrato por fecha">
           
       </mat-form-field>
       <button class="btCreateWorker"  mat-raised-button [routerLink]="'/employeer/addContract'">Nuevo</button>
