--- a/src/app/worker/listar-contract-monto/listar-contract-monto.component.html
+++ b/src/app/worker/listar-contract-monto/listar-contract-monto.component.html
@@ -1,10 +1,10 @@
 <div class="container">
-    <h1 style="text-align: center">Buscar Contratos Por Monto</h1>
+    <h1 style="text-align: center">Contratos aceptados por trabajador</h1>
     <div class="searchNav">
     <mat-form-field appearance="outline" class="inputSearch">
     <!-- <mat-label>Nombre</mat-label> -->
     
-<input matInput (keyup) = "filtrar($event)" placeholder="Buscar X Monto">
+<input matInput (keyup) = "filtrar($event)" placeholder="Buscar por Monto">
     </mat-form-field>
     <button class="btCreateWorker"  mat-raised-button [routerLink]="'/worker/addContractWorker'">Nuevo</button>
 
