--- a/src/app/worker/listar/listar.component.html
+++ b/src/app/worker/listar/listar.component.html
@@ -4,7 +4,7 @@
     <mat-form-field appearance="outline" class="inputSearch">
         <!-- <mat-label>Nombre</mat-label> -->
         
-        <input matInput (keyup) = "filtrar($event)" placeholder="Buscar Trabajador">
+        <input matInput (keyup) = "filtrar($event)" placeholder="Buscar trabajador">
         
     </mat-form-field>
     <button class="btCreateWorker"  mat-raised-button [routerLink]="'/worker/nuevo'">Nuevo</button>
@@ -81,7 +81,7 @@
             </button>
             <button mat-menu-item [routerLink]="'/worker/contractWorker'">
               <mat-icon>create</mat-icon>
-              <span>Crear Contrato</span>
+              <span>Aceptar Contrato</span>
             </button>
             <!-- <button mat-menu-item>
               <mat-icon>notifications_off</mat-icon>
