--- a/src/app/worker/register-contract/register-contract.component.html
+++ b/src/app/worker/register-contract/register-contract.component.html
@@ -3,11 +3,11 @@
     
         
         <form (ngSubmit)="onSubmit()" [formGroup]="form">
-            <mat-label class="titleForm">REGISTRA TU CONTRATO-WORKER</mat-label>
+            <mat-label class="titleForm">Acepta tu contrato</mat-label>
             <br>
             <br>
             <mat-form-field appearance="outline" class="fieldFormCU">
-                <mat-label>Ingresa tu ID</mat-label>
+                <mat-label>Ingresa tu ID de trabajador</mat-label>
                 <input matInput placeholder="ID" formControlName="worker_id">
             </mat-form-field>
             <br>
