--- a/src/app/employeer/create-edit/create-edit.component.html
+++ b/src/app/employeer/create-edit/create-edit.component.html
@@ -33,7 +33,7 @@
         <br>
         <div class="groupButton">
             <button mat-raised-button type="submit" color="primary">{{tipoAccion}}</button>
-            <button mat-raised-button color="warn" routerLink="/authors">Cancelar</button>
+            <button mat-raised-button color="warn" routerLink="/employeer">Cancelar</button>
         </div>
         <p>{{mensaje}}</p>
     </form>
