--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,11 +4,12 @@
     </button>
     <span class="titleApp">EASYJOBS</span>
     <span class="example-spacer"></span>
-    <button class="btToolbar" [routerLink]="'employeer'" mat-button>Empleados</button>
+    <button class="btToolbar" [routerLink]="'worker'" mat-button>Trabajadores</button>
+    <button class="btToolbar" [routerLink]="'employeer'" mat-button>Empleadores</button>
     <button class="btToolbar" [routerLink]="'occupation'" mat-button>Ocupaciones</button>
-    <button class="btToolbar" [routerLink]="'employeer/contractService'" mat-button>Contrato</button>
-    <button class="btToolbar" [routerLink]="'home'" mat-button>REGISTRATE</button>
+    <button class="btToolbar" [routerLink]="'employeer/contractService'" mat-button>Contratos</button>
+    <button class="btToolbar" [routerLink]="'home'" mat-button>Regístrate</button>
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon><img src=""></mat-icon>
+      <mat-icon><img src="../../assets/miraral_frente.jpg"></mat-icon>
     </button>
 </mat-toolbar>
